<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2019 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <variable
      name="viewModel"
      type="com.google.android.gnd.ui.offlinebasemap.OfflineBaseMapsViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.gnd.ui.common.TwoLineToolbar
      android:id="@+id/offline_areas_toolbar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:elevation="@dimen/toolbar_elevation"
      android:theme="@style/PrimaryToolbarTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:title="@string/offline_base_maps"
      app:titleTextColor="@color/colorBackground" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/offline_areas_list"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/offline_areas_toolbar" />

    <com.google.android.material.chip.Chip
      android:id="@+id/floatingActionButton"
      style="@style/ChipButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/chip_button_margin_right"
      android:layout_marginRight="@dimen/chip_button_margin_right"
      android:layout_marginBottom="@dimen/map_btn_margin_bottom"
      android:clickable="true"
      android:contentDescription="@string/offline_base_map_selector_prompt"
      android:focusable="true"
      android:onClick="@{() -> viewModel.showOfflineAreaSelector()}"
      android:text="@string/offline_base_map_selector_select"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />
    <TextView
      android:id="@+id/no_areas_downloaded_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/chip_button_margin_right"
      android:layout_marginRight="@dimen/chip_button_margin_right"
      android:layout_marginBottom="@dimen/map_btn_margin_bottom"
      android:clickable="false"
      android:contentDescription="@string/offline_base_map_selector_prompt"
      android:focusable="true"
      android:onClick="@{() -> viewModel.showOfflineAreaSelector()}"
      android:text="@string/no_basemaps_downloaded"
      android:visibility="@{viewModel.noAreasMessageVisibility}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
