<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2021 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  app:layout_constraintCircleRadius="32dp"
  android:layout_height="wrap_content">

  <ImageView
    android:contentDescription="@string/add_polygon_instructions"
    android:layout_marginTop="32dp"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/polygon_info_image"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/ic_polygon_dialog_info"
    />

  <TextView
    android:id="@+id/info_polygon_text"
    android:layout_width="0dp"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    android:layout_marginTop="16dp"
    android:layout_height="wrap_content"
    android:text="@string/add_polygon_instructions"
    app:layout_constraintStart_toStartOf="@id/polygon_info_image"
    app:layout_constraintEnd_toEndOf="@id/polygon_info_image"
    app:layout_constraintTop_toBottomOf="@id/polygon_info_image"
    />

  <Button
    android:text="@string/get_started_button_text"
    android:id="@+id/get_started_button"
    app:layout_constraintStart_toStartOf="@id/info_polygon_text"
    app:layout_constraintEnd_toEndOf="@id/info_polygon_text"
    app:backgroundTint="@color/colorAccent"
    app:layout_constraintTop_toBottomOf="@id/info_polygon_text"
    android:layout_width="0dp"
    android:layout_marginTop="28dp"
    android:layout_height="wrap_content"/>

  <TextView
    android:text="@string/cancel"
    android:id="@+id/cancel_text_view"
    app:layout_constraintStart_toStartOf="@id/info_polygon_text"
    app:layout_constraintEnd_toEndOf="@id/info_polygon_text"
    android:textColor="@color/colorAccent"
    app:backgroundTint="@android:color/white"
    android:textAlignment="center"
    android:gravity="center_horizontal"
    app:layout_constraintTop_toBottomOf="@id/get_started_button"
    android:layout_width="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="58dp"
    android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>