<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- TODO: Use camelCase for all ids here for consistency -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navGraph"
  app:startDestination="@id/startup_fragment">
  <fragment
    android:id="@+id/startup_fragment"
    android:name="com.google.android.ground.ui.startup.StartupFragment"
    android:label="startup_frag"
    tools:layout="@layout/startup_frag">
    <action
      android:id="@+id/proceedToSignInScreen"
      app:destination="@id/sign_in_fragment"
      app:popUpTo="@id/navGraph"
      app:popUpToInclusive="true" />
    <action
      android:id="@+id/proceedToHomeScreen"
      app:destination="@id/home_screen_fragment"
      app:popUpTo="@id/navGraph"
      app:popUpToInclusive="true" />
    <action
      android:id="@+id/showTermsOfService"
      app:destination="@id/terms_of_service_fragment"
      app:popUpTo="@id/navGraph"
      app:popUpToInclusive="true" />
  </fragment>

  <fragment
    android:id="@+id/home_screen_fragment"
    android:name="com.google.android.ground.ui.home.HomeScreenFragment"
    android:label="@string/map_view"
    tools:layout="@layout/home_screen_frag">
    <action
      android:id="@+id/showSubmissionDetails"
      app:destination="@id/submission_details_fragment"
      app:enterAnim="@anim/nav_default_enter_anim"
      app:exitAnim="@anim/nav_default_exit_anim"
      app:popEnterAnim="@anim/nav_default_pop_enter_anim"
      app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    <action
      android:id="@+id/addSubmission"
      app:destination="@id/edit_submission_fragment">
      <argument
        android:name="submissionId"
        android:defaultValue="" />
    </action>
    <action
      android:id="@+id/fromHomeScreenToSignInScreen"
      app:destination="@id/sign_in_fragment"
      app:popUpTo="@id/navGraph"
      app:popUpToInclusive="true" />
    <action
      android:id="@+id/show_sync_status"
      app:destination="@id/sync_status_fragment" />
    <action
      android:id="@+id/showOfflineAreas"
      app:destination="@id/offline_areas_fragment" />
    <action
      android:id="@+id/action_home_screen_fragment_to_settings_activity"
      app:destination="@id/settings_activity" />
    <action
      android:id="@+id/action_home_screen_fragment_to_projectSelectorDialogFragment"
      app:destination="@id/surveySelectorDialogFragment" />
    <action
      android:id="@+id/action_home_screen_fragment_to_dataCollectionFragment"
      app:destination="@id/data_collection_fragment" />
    <action
      android:id="@+id/action_home_screen_fragment_to_locationOfInterestSelectorFragment"
      app:destination="@id/locationOfInterestSelectorFragment" />
    <action
      android:id="@+id/action_home_screen_fragment_to_mapTypeDialogFragment"
      app:destination="@id/mapTypeDialogFragment" />
  </fragment>
  <fragment
    android:id="@+id/sync_status_fragment"
    android:name="com.google.android.ground.ui.syncstatus.SyncStatusFragment"
    android:label="@string/sync_status"
    tools:layout="@layout/sync_status_frag" />
  <fragment
    android:id="@+id/data_collection_fragment"
    android:name="com.google.android.ground.ui.datacollection.DataCollectionFragment"
    android:label="@string/collect_data"
    tools:layout="@layout/data_collection_frag">
    <argument
      android:name="surveyId"
      type="string" />
    <argument
      android:name="locationOfInterestId"
      type="string" />
    <argument
      android:name="submissionId"
      type="string" />
  </fragment>
  <fragment
    android:id="@+id/question_data_collection_fragment"
    android:name="com.google.android.ground.ui.datacollection.QuestionDataCollectionFragment"
    android:label="@string/collect_data"
    tools:layout="@layout/question_data_collection_frag"></fragment>
  <fragment
    android:id="@+id/offline_areas_fragment"
    android:name="com.google.android.ground.ui.offlinebasemap.OfflineAreasFragment"
    android:label="@string/offline_base_maps"
    tools:layout="@layout/offline_base_maps_frag">
    <action
      android:id="@+id/showOfflineAreaSelector"
      app:destination="@id/offline_area_selector_fragment" />
    <action
      android:id="@+id/backToHomeScreen"
      app:destination="@id/home_screen_fragment" />
    <action
      android:id="@+id/viewOfflineArea"
      app:destination="@+id/offline_area_viewer_fragment" />
  </fragment>
  <fragment
    android:id="@+id/offline_area_selector_fragment"
    android:name="com.google.android.ground.ui.offlinebasemap.selector.OfflineAreaSelectorFragment"
    android:label="@string/offline_base_map_selector"
    tools:layout="@layout/offline_base_map_selector_frag">
    <action
      android:id="@+id/backToOfflineAreas"
      app:destination="@id/offline_areas_fragment" />
  </fragment>
  <fragment
    android:id="@+id/offline_area_viewer_fragment"
    android:name="com.google.android.ground.ui.offlinebasemap.viewer.OfflineAreaViewerFragment"
    android:label="@string/offline_base_map_viewer_title"
    tools:layout="@layout/offline_base_map_viewer_frag">
    <argument
      android:name="offlineAreaId"
      app:argType="string" />
  </fragment>
  <fragment
    android:id="@+id/submission_details_fragment"
    android:name="com.google.android.ground.ui.submissiondetails.SubmissionDetailsFragment"
    android:label="@string/view_submission_details"
    tools:layout="@layout/submission_details_frag">
    <argument
      android:name="surveyId"
      type="string" />
    <argument
      android:name="locationOfInterestId"
      type="string" />
    <argument
      android:name="submissionId"
      type="string" />
    <action
      android:id="@+id/editSubmission"
      app:destination="@id/edit_submission_fragment"
      app:enterAnim="@anim/nav_default_enter_anim"
      app:exitAnim="@anim/nav_default_exit_anim"
      app:popEnterAnim="@anim/nav_default_pop_enter_anim"
      app:popExitAnim="@anim/nav_default_pop_exit_anim">
      <argument
        android:name="jobId"
        android:defaultValue="N/A" />
    </action>
  </fragment>
  <fragment
    android:id="@+id/edit_submission_fragment"
    android:name="com.google.android.ground.ui.editsubmission.EditSubmissionFragment"
    android:label="edit_submission_frag"
    tools:layout="@layout/edit_submission_frag">
    <argument
      android:name="surveyId"
      type="string" />
    <argument
      android:name="locationOfInterestId"
      type="string" />
    <argument
      android:name="submissionId"
      type="string" />
    <argument
      android:name="jobId"
      type="string" />
    <argument
      android:name="restoredResponses"
      android:defaultValue="@null"
      app:argType="java.util.HashMap"
      app:nullable="true" />
  </fragment>
  <fragment
    android:id="@+id/sign_in_fragment"
    android:name="com.google.android.ground.ui.signin.SignInFragment"
    android:label="sign_in_frag"
    tools:layout="@layout/sign_in_frag">
    <action
      android:id="@+id/showTermsOfService"
      app:destination="@id/terms_of_service_fragment"
      app:popUpTo="@id/navGraph"
      app:popUpToInclusive="true" />
  </fragment>
  <activity
    android:id="@+id/settings_activity"
    android:name="com.google.android.ground.SettingsActivity"
    android:label="settings_activity"
    tools:layout="@layout/settings_activity" />
  <action
    android:id="@+id/showSignInScreen"
    app:destination="@id/sign_in_fragment"
    app:popUpTo="@id/navGraph" />
  <action
    android:id="@+id/showHomeScreen"
    app:destination="@id/home_screen_fragment"
    app:popUpTo="@id/navGraph" />

  <fragment
    android:id="@+id/terms_of_service_fragment"
    android:name="com.google.android.ground.ui.tos.TermsOfServiceFragment"
    android:label="@string/tos_title"
    tools:layout="@layout/fragment_terms_service">
    <argument
      android:name="termsOfServiceText"
      android:defaultValue=""
      app:argType="string"
      app:nullable="true" />
    <action
      android:id="@+id/proceedToHomeScreen"
      app:destination="@id/home_screen_fragment"
      app:popUpTo="@id/navGraph"
      app:popUpToInclusive="true" />
  </fragment>
  <dialog
    android:id="@+id/surveySelectorDialogFragment"
    android:name="com.google.android.ground.ui.surveyselector.SurveySelectorDialogFragment"
    android:label="ProjectSelectorDialogFragment" />
  <dialog
    android:id="@+id/locationOfInterestSelectorFragment"
    android:name="com.google.android.ground.ui.home.locationofinterestselector.LocationOfInterestSelectorFragment"
    android:label="LocationOfInterestSelectorFragment" />
  <dialog
    android:id="@+id/mapTypeDialogFragment"
    android:name="com.google.android.ground.ui.home.mapcontainer.MapTypeDialogFragment"
    android:label="MapTypeDialogFragment">
    <argument
      android:name="mapTypes"
      app:argType="com.google.android.ground.ui.map.MapType[]" />
  </dialog>

</navigation>